# cg-cfd-core

./: .project  Makefile.am  README.md  configure.ac  package-lock.json  package.json
src/: CMakeLists.txt  Makefile.srclist  cfdcore_address.cpp  cfdcore_amount.cpp  cfdcore_bytedata.cpp  cfdcore_coin.cpp  cfdcore_descriptor.cpp  cfdcore_elements_address.cpp  cfdcore_elements_script.cpp  cfdcore_elements_transaction.cpp  cfdcore_hdwallet.cpp  cfdcore_key.cpp  cfdcore_logger.cpp  cfdcore_manager.cpp  cfdcore_manager.h  cfdcore_script.cpp  cfdcore_secp256k1.cpp  cfdcore_secp256k1.h  cfdcore_transaction.cpp  cfdcore_transaction_common.cpp  cfdcore_util.cpp  cfdcore_wally_util.cpp  cfdcore_wally_util.h
test/: CMakeLists.txt  Makefile.srclist  test_abstract_transaction.cpp  test_abstracttxin.cpp  test_abstracttxout.cpp  test_address.cpp  test_amount.cpp  test_blockhash.cpp  test_bytedata.cpp  test_bytedata160.cpp  test_bytedata256.cpp  test_cfdlogger.cpp  test_cryptoutil.cpp  test_descriptor.cpp  test_elements_blindfactor.cpp  test_elements_confidentialaddress.cpp  test_elements_confidentialassetid.cpp  test_elements_confidentialnonce.cpp  test_elements_confidentialtransaction.cpp  test_elements_confidentialtxin.cpp  test_elements_confidentialtxout.cpp  test_elements_confidentialvalue.cpp  test_elements_contracthashutil.cpp  test_elements_unblindedaddress.cpp  test_extkey.cpp  test_extprivkey.cpp  test_extpubkey.cpp  test_hashutil.cpp  test_hdwallet.cpp  test_manager.cpp  test_privkey.cpp  test_pubkey.cpp  test_randomnumberutil.cpp  test_script.cpp  test_scriptbuilder.cpp  (+12 more)
(+23 files in other folders)
